k8s/staging/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  generation: 1
  name: echo
  namespace: echo
spec:
  rules:
  - host: echo-dashboard.razorpay.in
    http:
      paths:
      - backend:
          serviceName: echo
          servicePort: 80
      path: /
